# shinobu-bot

./: .gitignore  CONSTANTS.py  LICENSE  Pipfile  README.md  TOKEN  add_characters.py  main.py  pyproject.toml  shinobu.py
api/: my_context.py  shinobu.py
data/: CONSTANTS.py
extensions/: blame.py  call_notification.py  economy.py  file_upload.py  misc.py  myanimelist.py  ping.py  print_source.py  shop.py  tags.py  trade.py  waifu_shop.py  waifu_transactions.py
extensions/booru/: CONSTANTS.py  README.md  __init__.py  booru.py  boorualias.py  boorucore.py  boorusources.py
extensions/waifus/: __init__.py  shop.py  trade.py  transactions.py
game_data/: actions.py  categories.py  effects.py  targets.py
utils/: bing_search.py  checks.py  constrain.py  database.py  decorators.py  files.py  formatting.py  interactions.py  main_guild.py  mal_rss.py  mal_scraper.py  messages.py  myanimelist_rss.py  myanimelist_scraper.py  setup_logging.py  shop.py  trade.py  waifus.py
