[tool.poetry]
name = "shinobu-bot"
version = "0.1.0"
description = ""
authors = ["funketh <theodor.k.funke@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9.0"
aiohttp = {extras = ["speedups"], version = "^3.6"}
discord-py = {extras = ["voice"], version = "^1.5.1"}
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
feedparser = "^6.0.0"
aiocache = "^0.11.1"
async-property = "^0.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
